# penumbra-wrapper

./: .gitignore  .tauri-build.env  AGENTS.md  README.md  WINDOWS_FIXES_SUMMARY.md  eslint.config.js  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: release.yml
openspec/changes/adb-tools/: design.md  (+2 more)
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  desktop.linux.hbs  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: adb.rs  device.rs  diagnostics.rs  erase.rs  fastboot.rs  fastboot_tools.rs  flash.rs  format.rs  mod.rs  read.rs  scatter.rs  settings.rs  tools.rs  updates.rs
src-tauri/src/models/: mod.rs  scatter.rs
src-tauri/src/services/: antumbra.rs  antumbra_update.rs  config.rs  mod.rs  scatter_parser.rs
src/components/: ConfirmationModal.tsx  ErrorBoundary.tsx  IdleAnimation.tsx  Layout.tsx  LogConsole.tsx  LogPanel.tsx  OperationModal.tsx  PartitionSkeleton.tsx  PartitionTable.tsx  ProgressBar.tsx  ProgressWidget.tsx  UpdateAvailableModal.tsx  WindowsDiagnosticsPanel.tsx
src/hooks/: confirmationContext.ts  confirmationProvider.tsx  useConfirmation.tsx  useDeviceConnection.ts  useFileSelection.ts  useOperationStream.ts  usePartitionOperations.ts  useSettings.ts
src/pages/: AdbFastboot.tsx  Dashboard.tsx  Flasher.tsx  Tools.tsx
src/store/: deviceStore.ts  flasherStore.ts  operationStore.ts  partitionStore.ts  uiStore.ts  updateStore.ts
src/types/: errors.ts  index.ts
(+66 files in other folders)
