# SPDX-License-Identifier: AGPL-3.0-or-later
# SPDX-FileCopyrightText: 2025 Shomy

[package]
name = "penumbra-wrapper"
version = "0.1.0"
description = "A Tauri GUI for antumbra"
authors = ["Shomy"]
license = "AGPL-3.0-or-later"
edition = "2021"

[lib]
name = "penumbra_wrapper_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
dirs = "5"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
quick-xml = { version = "0.36", features = ["serialize"] }
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json", "stream"] }
flate2 = "1"
tar = "0.4"
zip = "2"
sha2 = "0.10"
hex = "0.4"
fern = "0.6"
libc = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
